// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders Header component correctly 1`] = `
<div>
  <header>
    <div
      class="container"
    >
      <h1
        class="name"
      >
        <a
          href="https://github.com/profile"
        >
          Name Name
        </a>
      </h1>
    </div>
    <div
      class="sub links"
    >
      <div>
        <a
          href="mailto:email@email.email"
        >
          email@email.email
        </a>
      </div>
      <div>
        <a
          href="https://linkedin.com/in/profile"
        >
          linkedin.com/in/profile
        </a>
      </div>
      <div>
        <a
          href="https://github.com/profile"
        >
          github.com/profile
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders phone link when phone prop is true 1`] = `
<div>
  <header>
    <div
      class="container"
    >
      <h1
        class="name"
      >
        <a
          href="https://github.com/profile"
        >
          Name Name
        </a>
      </h1>
    </div>
    <div
      class="sub links"
    >
      <div>
        <a
          href="mailto:email@email.email"
        >
          email@email.email
        </a>
      </div>
      <div>
        <a
          href="https://linkedin.com/in/profile"
        >
          linkedin.com/in/profile
        </a>
      </div>
      <div>
        <a
          href="https://github.com/profile"
        >
          github.com/profile
        </a>
      </div>
      <div>
        <a
          href="tel:+17188675309"
        >
          7188675309
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders qr code when url is defined 1`] = `
<div>
  <header>
    <div
      class="container"
    >
      <img
        alt="url QR code"
        class="img"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Fqr.qr%2Ft&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fqr.qr%2Ft&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Fqr.qr%2Ft&w=256&q=75 2x"
        style="color: transparent;"
        width="100"
      />
      <h1
        class="name"
      >
        <a
          href="https://github.com/profile"
        >
          Name Name
        </a>
      </h1>
    </div>
    <div
      class="sub links"
    >
      <div>
        <a
          href="mailto:email@email.email"
        >
          email@email.email
        </a>
      </div>
      <div>
        <a
          href="https://linkedin.com/in/profile"
        >
          linkedin.com/in/profile
        </a>
      </div>
      <div>
        <a
          href="https://github.com/profile"
        >
          github.com/profile
        </a>
      </div>
    </div>
  </header>
</div>
`;
